--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <title>assignment 1</title>
 </head>
 <body>
-    <button id="fetchdata">Get the Data</button>
+    <button id="fetchdata">MY Git</button>
     <div id="result"></div>
     <script src="js/script.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
